# xi-io-Inbox

./: .gitignore  AGENTS.md  README.md  TODO.md  package-lock.json  package.json
.cursor/: hooks.json
docs/: EMAIL-EVIDENCE-ARCHIVE-ARCHITECTURE.md  INBOX-STATUS-20260624.md  PORTABLE-DEPLOYMENT-ARCHITECTURE.md  PRIVATE-DATA-BOUNDARY.md
examples/: evidence-email-timeline-ledger.example.jsonl
public/: automations-owner-mode.css  automations-owner-mode.js  brand-shell-polish-001.css  brand-shell-polish-002.css  brand-shell-polish-002b.css  brand-shell-polish-002c.css  calendar-owner-mode.css  calendar-owner-mode.js  home-owner-mode.css  home-owner-mode.js  ibal-owner-mode.css  ibal-owner-mode.js  inbox-preview.css  inbox-preview.js  index.html  mail-body-renderer-001a.css  shell-layout-001.css  tasks-owner-mode.css  tasks-owner-mode.js
registries/: evidence-email-canonical-tags.json  gmail-label-to-evidence-tag-map.example.json
schemas/: action-proposal.schema.json  ai-provider-manifest.schema.json  egress-permission.schema.json  evidence-email-event.schema.json  inbox-event.schema.json  provider-manifest.schema.json
scripts/: acc-001-model-check.mjs  acc-sync-ui-001-model-check.mjs  brand-002-model-check.mjs  brand-002c-route-audit.mjs  check-quick.mjs  (+21 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.toml
src-tauri/permissions/: allow-gmail-runtime-read.toml  allow-gmail-runtime-sync.toml
src-tauri/src/: lib.rs  main.rs  runtime_store.rs
src-tauri/src/gmail_provider/: args.rs  mail_index.rs  mod.rs  redaction.rs  sidecar.rs
(+373 files in other folders)
