[package]
name = "xi-io-inbox"
version = "0.1.0"
description = "xi-io Inbox local desktop runtime (Tauri)"
authors = ["xi-io"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "xi_io_inbox_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }

[profile.dev]
incremental = true

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
